--- a/home.html
+++ b/home.html
@@ -7,6 +7,7 @@
 
 <h1>Hello world!</h1>
 <p>This is the first file in my new Git Repo.</p>
+<p>I just add new line to my html code</p>
 
 </body>
 </html>
